# food-production-orchestrator

./: .env.example  pyproject.toml
dev/: block1_stub.py
src/orchestratore_llm/: __init__.py  chat_service.py  config.py  main.py
src/orchestratore_llm/llm/: __init__.py  client.py  system_prompt.py  tools.py
src/orchestratore_llm/schemas/: prediction.py
src/orchestratore_llm/services/: __init__.py  block1_client.py
tests/: test_block1_client.py  test_chat_service.py  test_llm_client_factory.py  test_websocket.py
